syntax="proto3";

package ThmServices;

service Connector {
    rpc Login (LoginReq) returns (LoginRsp);
    rpc Logout (LogoutReq) returns (LogoutRsp);
    rpc InitConnection (ConnectReq) returns (ConnectRsp);
}

message LoginReq {
    string user_id = 1;
    string server = 3;
    int32 port = 4;
}

message LoginRsp {
    string message = 1;
}

message LogoutReq {

}

message LogoutRsp {

}

message ConnectReq {

}

message ConnectRsp {

}
